test/fail/and-pattern-type-overlap.mo
let { type T } and { type T } : module { type T = Nat } =
  module { public type T = Nat };
